[project]
name = "machinescesi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastexcel>=0.15.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
]
